<resources>
    <string name="app_name">JetpackWanAndroid</string>
    <string name="home">首页</string>
    <string name="s_system">体系</string>
    <string name="bjnews">公众号</string>
    <string name="s_project">项目</string>
    <string name="mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_search">搜索</string>

    <!-- 黄金比例 -->
    <string name="app_golden_ratio_horizontal">1:0.618</string>
    <string name="app_golden_ratio_vertical">0.618:1</string>
</resources>