<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main.xml"
    app:startDestination="@id/fragHome">
    <fragment
        android:id="@+id/fragHome"
        android:name="com.rocky.jetpackwanandroid.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/bjNewsFragment"
        android:name="com.rocky.jetpackwanandroid.home.BjNewsFragment"
        android:label="@string/bjnews" />
    <fragment
        android:id="@+id/mineFragment"
        android:name="com.rocky.jetpackwanandroid.home.MineFragment"
        android:label="@string/mine" />
    <fragment
        android:id="@+id/projectFragment"
        android:name="com.rocky.jetpackwanandroid.home.ProjectFragment"
        android:label="ProjectFragment" />
    <fragment
        android:id="@+id/systemFragment"
        android:name="com.rocky.jetpackwanandroid.home.SystemFragment"
        android:label="@string/s_system" />
</navigation>